Update Project's page

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -461,6 +461,49 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-xs-12 col-md-4">
+                            <div class="box">
+                                <div style="margin: 20px;" data-os-animation="fadeInDown">
+                                    <span><img src="./assets/images/assetProject/pms.png" width="70" height="70"/></span>
+                                </div>
+                                <div class="info">
+                                    <h4 class="text-center">Multi-Spé</h4>
+                                    <p>
+                                        Etudiants SIGL, Sécurité et Réseaux' se regroupent afin de
+                                        proposer une solution de transformation à un metier qui en a besoin
+                                        (ex: hopitaux)
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-xs-12 col-md-4">
+                            <div class="box">
+                                      <div style="margin: 20px;" data-os-animation="fadeInDown">
+                                    <span><img src="./assets/images/assetProject/agile.png" width="70" height="70"/></span>
+                                </div>
+                                <div class="info">
+                                    <h4 class="text-center"><a routerLink='/modules'>Méthodologie Agile</a></h4>
+                                    <p>
+                                        Projet libre respectant les principes et les bonne practiques de l'Agile.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-xs-12 col-md-4">
+                            <div class="box">
+                                <div style="margin: 20px;" data-os-animation="fadeInDown">
+                                    <span><img src="./assets/images/assetProject/architecture.png" width="70" height="70"/></span>
+                                </div>
+                                <div class="info">
+                                    <h4 class="text-center">Architecture</h4>
+                                    <p>
+                                        Projet de classe permettant de comprendre toutes les facettes de l'Architecture des SI
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- /.row -->
