add contact feature

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1159,13 +1159,21 @@
                         <h2>Nos Réseaux sociaux</h2>
                     </div>
                     <hr class="hr-title-01 hr-icon">
+                
                     <div class="col-md-6">
                         <a class="twitter-timeline" data-height="500" href="https://twitter.com/SIGL_EPITA">Tweets by SIGL_EPITA</a>
                     </div>
                     <div class="col-md-6">
                         <a href="#" class="dark-btn"> <i class="fa fa-facebook"></i>             Nous rejoindre sur Facebook</a>
                     </div>
+                    <div class="col-md-6">
+                        <a href="mailto:laboratoire.sigl@epita.fr" class="gradient-btn">
+                                <span>Nous contacter</span>
+                    </a>
+                    </div>
+                    
                 </div>
+               
             </div>
         </section>
 
