modify logo size sigl.png and delete logo class

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
                     </button>
 
       <a class="navbar-brand page-scroll" href="#page-top">
-                        <img class="logo" src="./assets/images/assetProject/SIGL.png" alt="logo">
+                        <img class="" src="./assets/images/assetProject/SIGL.png" alt="logo">
                     </a>
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
