ajust color navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
-<nav class="navbar navbar-default navbar-gradient navbar-fixed-top">
+<nav class="navbar navbar-default navbar-gradient navbar-fixed-top" style="background:#545454">
   <div class="container">
-    <div class="navbar-header page-scroll">
+    <div class="navbar-header page-scroll" >
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
