--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1156,7 +1156,7 @@
             <div class="container">
                 <div class="row">
                     <div class="section-title">
-                        <h2>Nos Réseaux sociaux</h2>
+                        <h2>{{'Social' | translate}}</h2>
                     </div>
                     <hr class="hr-title-01 hr-icon">
                 
