--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -34,6 +34,9 @@
           <a class="page-scroll" href="#opportunities">{{'Careers' | translate}}</a>
         </li>
         <li>
+          <a class="page-scroll" href="#socials">{{'Social' | translate}}</a>
+        </li>
+        <li>
           <a class="page-scroll" href="#review">{{'Testimonies' | translate}}</a>
         </li>
         
