--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -39,6 +39,12 @@
         <li>
           <a class="page-scroll" href="#review">{{'Testimonies' | translate}}</a>
         </li>
+        <li>
+         <img style="margin: 5px" (click)="changeLanguage('fr')" src="../assets/images/flag/France.png"/>
+        </li>
+        <li>
+          <img style="margin: 5px" (click)="changeLanguage('en')" src="../assets/images/flag/England.png"/>
+        </li>
         
       </ul>
     </div>
