add multi langue texte to courses list

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -525,13 +525,13 @@
                     <div class="col-md-6">
                         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                           <div class="section-title">
-                              <h3>Leadership et Management</h3>
+                              <h3>{{ "L&M" | translate}}  </h3>
                           </div>
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="headingOne">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                            OPCO : Organisation Personnelle et Communication
+                                            {{ "LM_OPCO" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -552,7 +552,7 @@
                                 <div class="panel-heading" role="tab" id="headingTwo">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                            AMOA : Maitrise d’ouvrage des SI
+                                            {{ "LM_AMOA" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -575,7 +575,7 @@
                                 <div class="panel-heading" role="tab" id="headingThree">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                            OPDI : Organisation et pilotage d’une DSI
+                                            {{ "LM_OPDI" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -600,7 +600,7 @@
                                 <div class="panel-heading" role="tab" id="headingFour">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                            COIN : Communication Interpersonnelle
+                                            {{ "LM_COIN" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -624,13 +624,13 @@
                     <div class="col-md-6">
                         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                           <div class="section-title">
-                              <h3>Cloud et Architecture</h3>
+                              <h3>{{ "C&A" | translate}}  </h3>
                           </div>
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="headingOne">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                                            URSI : Urbanisation des SI
+                                            {{ "LM_URSI" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -650,7 +650,7 @@
                                 <div class="panel-heading" role="tab" id="headingTwo">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                                            VIT1 : Virtualisation & Transformation ITs
+                                            {{ "LM_VIT1" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -670,7 +670,7 @@
                                 <div class="panel-heading" role="tab" id="headingThree">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                                            ARCL : Architecture Cloud
+                                            {{ "LM_ARCL" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -689,7 +689,7 @@
                                 <div class="panel-heading" role="tab" id="headingFour">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
-                                            SOAR : Solution Architecture ( + TD infrastructures & Projet PMS)
+                                            {{ "LM_SOAR" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -730,19 +730,19 @@
                     <div class="col-md-6">
                         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                           <div class="section-title">
-                              <h3>Mobilité et Applications</h3>
+                              <h3>{{ "M&A" | translate}}  </h3>
                           </div>
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="headingOne">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
-                                            ARLA : Architecture Logicielle
+                                            {{ "LM_ARLA" | translate}}
                                         </a>
                                     </h4>
                                 </div>
                                 <div id="collapseEleven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body">
-                                        <h4 style="color:red">Il manque une slide sur le kick-off SIGL </h4>
+                                        <h4>Lucas Boisserie</h4>
                                         <h5>Objectifs: </h5>  
                                         <p></p>
                                         <p></p>
@@ -755,7 +755,7 @@
                                 <div class="panel-heading" role="tab" id="headingTwo">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
-                                            MEPA : Mise en pratique agile
+                                            {{ "LM_MEPA" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -774,7 +774,7 @@
                                 <div class="panel-heading" role="tab" id="headingThree">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
-                                            ACOO : Analyse et Conception Orienté Objet
+                                            {{ "LM_ACOO" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -794,7 +794,7 @@
                                 <div class="panel-heading" role="tab" id="headingFour">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">
-                                            NLPF : Nouveaux Langages de Prog. et Framework
+                                            {{ "LM_ACOO" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -814,7 +814,7 @@
                                 <div class="panel-heading" role="tab" id="headingFive">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFiveteen" aria-expanded="false" aria-controls="collapseFiveteen">
-                                            DEVO : DevOps
+                                            {{ "LM_DEVO" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -836,13 +836,13 @@
                     <div class="col-md-6">
                         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                           <div class="section-title">
-                              <h3>Digitalisation et Transformation</h3>
+                              <h3>{{ "D&T" | translate}}  </h3>
                           </div>
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="headingOne">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSixteen" aria-expanded="false" aria-controls="collapseSixteen">
-                                            ACCC : Accompagnement au Changement
+                                            {{ "LM_ACCC" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -860,7 +860,7 @@
                                 <div class="panel-heading" role="tab" id="headingTwo">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeventeen" aria-expanded="false" aria-controls="collapseSeventeen">
-                                            INNO : Innovation
+                                            {{ "LM_INNO" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -879,7 +879,7 @@
                                 <div class="panel-heading" role="tab" id="headingThree">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEighteen" aria-expanded="false" aria-controls="collapseEighteen">
-                                          PMDE : Projet mode d’emploi
+                                          {{ "LM_PMDE" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -898,7 +898,7 @@
                                 <div class="panel-heading" role="tab" id="headingFour">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNineteen" aria-expanded="false" aria-controls="collapseNineteen">
-                                            DIGI : Digitalisation
+                                            {{ "LM_DIGI" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -937,7 +937,7 @@
                                 <div class="panel-heading" role="tab" id="headingFive">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwenty" aria-expanded="false" aria-controls="collapseTwenty">
-                                            VIT2 : Virtualisation & Transformation IT
+                                            {{ "LM_VIT2" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -957,7 +957,7 @@
                                 <div class="panel-heading" role="tab" id="headingSix">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyOne" aria-expanded="false" aria-controls="collapseTwentyOne">
-                                            METH : Méthodes
+                                            {{ "LM_METH" | translate}}
                                         </a>
                                     </h4>
                                 </div>
@@ -976,7 +976,7 @@
                                 <div class="panel-heading" role="tab" id="headingSeven">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyTwo" aria-expanded="false" aria-controls="collapseTwentyTwo">
-                                            PERS : Perspectives IT
+                                            {{ "LM_PERS" | translate}}
                                         </a>
                                     </h4>
                                 </div>
