--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -40,10 +40,10 @@
           <a class="page-scroll" href="#review">{{'Testimonies' | translate}}</a>
         </li>
         <li>
-         <img  height="24" width="24" style="margin: 5px" (click)="changeLanguage('fr')" src="../assets/images/flag/France.png"/>
+         <img  height="24" width="24" style="margin: 5px" (click)="changeLanguage('fr')" src="./assets/images/flag/France.png"/>
         </li>
         <li>
-          <img height="24" width="24" style="margin: 5px" (click)="changeLanguage('en')" src="../assets/images/flag/England.png"/>
+          <img height="24" width="24" style="margin: 5px" (click)="changeLanguage('en')" src="./assets/images/flag/England.png"/>
         </li>
         
       </ul>
