Add redirection to the intranet

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -40,6 +40,9 @@
           <a class="page-scroll" href="#review">{{'Testimonies' | translate}}</a>
         </li>
         <li>
+          <a class="page-scroll" href="https://sigl.epita.fr/">Intranet</a>
+        </li>
+        <li>
          <img  height="24" width="24" style="margin: 5px" (click)="changeLanguage('fr')" src="../assets/images/flag/France.png"/>
         </li>
         <li>
