Update navbar style

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
-<nav class="navbar navbar-default navbar-gradient navbar-fixed-top" style="background:#696969">
+<nav class="navbar navbar-default navbar-dark navbar-fixed-top">
   <div class="container">
     <div class="navbar-header page-scroll" >
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
