add button 'report an issue'

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1272,21 +1272,22 @@
         
 <!-- /.contact -->
 <!-- footer -->
+
 <footer class="footer">
-  <div class="container">
-    <div class="row">
-      <!-- /.col -->
-      <div class="col-md-6">
-        <ul class="social-network">
-        </ul>
-      </div>
-      <!-- /.col -->
-    </div>
-    <!-- /.row -->
-  </div>
-  <!-- /.container -->
-  <a href="#" class="go-top"><i class="fa fa-angle-up"></i></a>
-</footer>
+       
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 center">
+                    <a target="_blanck" type="button" href="https://github.com/laboratoire-sigl/site-vitrine/issues/new" class="btn btn-default btn-xs "> {{ 'githubIssue' | translate}}</a>
+
+                </div>
+             </div>
+        </div>
+       
+    
+            <!-- /.container -->
+            <a href="#" class="go-top"><i class="fa fa-angle-up"></i></a>
+        </footer>
 <!-- /.footer -->
 
 <!-- scripts -->
