--- a/src/assets/css/core/main.css
+++ b/src/assets/css/core/main.css
@@ -862,3 +862,9 @@ hr.hr-icon-dark-light:after {
     padding-left: 20px;
   }
 }
+
+.center{
+    margin:auto;
+    float:none;  /* annule le float:left de bootstrap*/;
+    text-align: center;
+}
