--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -149,7 +149,7 @@
               <div class="col-md-6 col-sm-6 col-xs12 np">
                 <div class="pricing-table best">
                   <div class="pricing-table-header">
-                    <h3 class="heading gradient-text">Advanced</h3>
+                    <h3 class="heading gradient-text">Test</h3>
                   </div>
                   <p class="pricing-content">
                     Maecenas at feugiat massa. Praesent non nunc augue. Donec condimentum nunc at dapibus tincidunt. Phasellus rhoncus urna ante,
