correct paths for flags in navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
                     </button>
 
       <a class="navbar-brand page-scroll" href="#page-top">
-                        <img class="" src="./assets/images/assetProject/SIGL.png" alt="logo">
+                        <img class="" src="assets/images/assetProject/SIGL.png" alt="logo">
                     </a>
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -43,10 +43,10 @@
           <a class="page-scroll" href="https://sigl.epita.fr/">Intranet</a>
         </li>
         <li>
-         <img  height="24" width="24" style="margin: 5px" (click)="changeLanguage('fr')" src="../assets/images/flag/France.png"/>
+         <img  height="24" width="24" style="margin: 5px" (click)="changeLanguage('fr')" src="assets/images/flag/France.png"/>
         </li>
         <li>
-          <img height="24" width="24" style="margin: 5px" (click)="changeLanguage('en')" src="./assets/images/flag/England.png"/>
+          <img height="24" width="24" style="margin: 5px" (click)="changeLanguage('en')" src="assets/images/flag/England.png"/>
         </li>
         
       </ul>
