--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1169,6 +1169,11 @@
                         <a href="mailto:laboratoire.sigl@epita.fr" class="gradient-btn">
                                 <span>Nous contacter</span>
                     </a>
+                    <form method="POST" action="http://formspree.io/romain.labat@epita.fr">
+                        <input type="email" name="email" placeholder="Your email">
+                        <textarea name="message" placeholder="Your message"></textarea>
+                        <button type="submit">Send</button>
+                      </form>
                     </div>
                     
                 </div>
