Add more translations

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -399,9 +399,9 @@
                                     <span><img src="./assets/images/assetProject/bcase.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
-                                    <h4 class="text-center">Virtualisation</h4>
+                                    <h4 class="text-center">{{"VIRT" | translate }}</h4>
                                     <p>
-                                        Réalisation de Business cases projets se basant sur des lignes de coûts et des leviers d’économies.
+                                        {{"VIRTText" | translate}}
 
                                     </p>
                                 </div>
@@ -415,7 +415,7 @@
                                 <div class="info">
                                     <h4 class="text-center">IoT</h4>
                                     <p>
-                                         Proposer un produit IoT puis le marketer (BCase, pub vidéo) jusqu'à la réalistion d'un Proof Of Concept
+                                         {{"IOTText" | translate}}
                                     </p>
                                 </div>
                             </div>
@@ -428,8 +428,7 @@
                                 <div class="info">
                                     <h4 class="text-center">Product & Experiment</h4>
                                     <p>
-                                       Projet avec entreprise tout le long de l'année; <br/>
-                                       SIGL, RE, Société Général, KornFerry, GN...
+                                       {{"PAEText" | translate}}
                                     </p>
                                 </div>
                             </div>
@@ -440,9 +439,9 @@
                                     <span><img src="./assets/images/assetProject/ursi.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
-                                    <h4 class="text-center"><a routerLink='/modules'>Urbanisation des SI</a></h4>
+                                    <h4 class="text-center">{{"URSI" | translate}}</h4>
                                     <p>
-                                        Développement d'un SI  simulant le comportement d'une société de distibution tel que la Fnac et Darty.
+                                       {{"URSIText" | translate}}
                                     </p>
                                 </div>
                             </div>
@@ -455,7 +454,7 @@
                                 <div class="info">
                                     <h4 class="text-center">Web Technologies</h4>
                                     <p>
-                                        Deux projets avec des technologies modernes différentes au choix; ROR, Javascript, Golang...
+                                       {{"WTText" | translate}}
                                     </p>
                                 </div>
                             </div>
@@ -466,11 +465,9 @@
                                     <span><img src="./assets/images/assetProject/pms.png" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
-                                    <h4 class="text-center">Multi-Spé</h4>
+                                    <h4 class="text-center">{{"PMS" | translate}}</h4>
                                     <p>
-                                        Etudiants SIGL, Sécurité et Réseaux' se regroupent afin de
-                                        proposer une solution de transformation à un metier qui en a besoin
-                                        (ex: hopitaux)
+                                        {{"PMSText" | translate}}
                                     </p>
                                 </div>
                             </div>
@@ -482,9 +479,9 @@
                                     <span><img src="./assets/images/assetProject/agile.png" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
-                                    <h4 class="text-center"><a routerLink='/modules'>Méthodologie Agile</a></h4>
+                                    <h4 class="text-center"><a routerLink='/modules'>{{"MEPA" | translate}}</a></h4>
                                     <p>
-                                        Projet libre respectant les principes et les bonne practiques de l'Agile.
+                                        {{"MEPAText" | translate}}
                                     </p>
                                 </div>
                             </div>
@@ -498,7 +495,7 @@
                                 <div class="info">
                                     <h4 class="text-center">Architecture</h4>
                                     <p>
-                                        Projet de classe permettant de comprendre toutes les facettes de l'Architecture des SI
+                                        {{"ARCHText" | translate}}
                                     </p>
                                 </div>
                             </div>
@@ -1021,7 +1018,7 @@
             <div class="container">
                 <div class="row">
                     <div class="section-title">
-                        <h2>Les débouchés</h2>
+                        <h2>{{"DEB" | translate }}</h2>
                     </div>
                     <hr class="hr-title-01 hr-icon">
                     <div class="blog-position">
