Add translations to Opportunities section

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -516,7 +516,7 @@
             <div class="container">
                 <div class="row">
                     <div class="section-title">
-                        <h2>Liste des matières</h2>
+                        <h2>{{"Matières" | translate}}</h2>
                     </div>
                     <hr class="hr-title hr-icon">
                     <div class="col-md-6">
@@ -1033,15 +1033,15 @@
                                 <!-- /.pic -->
                                 <div class="tiles-content">
                                     <h3 class="blog-title">
-                                        Technique
+                                        {{"Tech" | translate}}
                                     </h3>
                                     <br/>
                                    <ul>
-                                        <li>Développeur</li>
-                                        <li>Expert</li>
-                                        <li>Consultant technique</li>
-                                        <li>Ingénieur système</li>
-                                        <li>Chercheur</li>
+                                        <li>{{"Dev" | translate}}</li>
+                                        <li>{{"Expert" | translate}}</li>
+                                        <li>{{"ConsTech" | translate}}</li>
+                                        <li>{{"IngSyst" | translate}}</li>
+                                        <li>{{"Chercheur" | translate }}</li>
                                     </ul>
                                     
                                    
@@ -1062,13 +1062,13 @@
                                 <!-- /.pic -->
                                 <div class="tiles-content">
                                     <h3 class="blog-title">
-                                        Commercial
+                                        {{"Com" | translate}}
                                     </h3>
                                     <br/>
                                     <ul>
-                                        <li>Ingénieur d'affaire</li>
-                                        <li>Responsable de compte</li>
-                                        <li>Ingénieur avant vente</li>
+                                        <li>{{"IngAffaires" | translate}}</li>
+                                        <li>{{"RespCompte" | translate}}</li>
+                                        <li>{{"AvV" | translate }}</li>
                                         <li><br/></li>
                                         <li><br/></li>
                                         
@@ -1093,13 +1093,13 @@
                                 <!-- /.pic -->
                                 <div class="tiles-content">
                                     <h3 class="blog-title">
-                                        Organisationnel
+                                       {{"Orga" | translate}}
                                     </h3>
                                     <br/>
                                      <ul>
-                                        <li>Directeur informatique (DI, DSI, CIO, CSO, CDO ...)</li>
-                                        <li>Directeur de production</li>
-                                        <li>Consultant organisationnel</li>
+                                        <li>{{"Dir" | translate}}</li>
+                                        <li>{{"DirProd" | translate}}</li>
+                                        <li>{{"ConsOrga" | translate}}</li>
                                         <li><br/></li>
                                         
                                     </ul>
@@ -1121,15 +1121,15 @@
                                 <!-- /.pic -->
                                 <div class="tiles-content">
                                     <h3 class="blog-title">
-                                        Pluriel
+                                        {{"Plur" | translate}}
                                     </h3>
                                     <br/>
                                      <ul>
-                                        <li>Architecte</li>
-                                        <li>Chef de projet</li>
-                                        <li>Ingénieur méthode / qualité</li>
-                                        <li>Assistant maîtrise d'ouvrage</li>
-                                        <li>Business développeur</li>
+                                        <li>{{"Archi" | translate}}</li>
+                                        <li>{{"ChefProj" | translate }}</li>
+                                        <li>{{"IngQA" | translate}}</li>
+                                        <li>{{"AMOA" | translate }}</li>
+                                        <li>{{"BizDev" | translate}}</li>
                                         
                                     </ul>
                                        
