Add social networks translations and fix icons for projects in responsive/desktop

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -394,7 +394,7 @@
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-4">
-                            <div class="box">
+                            <div class="box" style="width:100%;">
                                 <div style="margin: 20px;" data-os-animation="fadeInDown">
                                     <span><img src="assets/images/assetProject/bcase.jpg" width="70" height="70"/></span>
                                 </div>
@@ -474,12 +474,12 @@
                         </div>
 
                         <div class="col-xs-12 col-md-4">
-                            <div class="box">
+                            <div class="box" style="width:100%;">
                                       <div style="margin: 20px;" data-os-animation="fadeInDown">
                                     <span><img src="assets/images/assetProject/agile.png" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
-                                    <h4 class="text-center"><a routerLink='/modules'>{{"MEPA" | translate}}</a></h4>
+                                    <h4 class="text-center">{{"MEPA" | translate}}</h4>
                                     <p>
                                         {{"MEPAText" | translate}}
                                     </p>
@@ -1160,11 +1160,11 @@
                         <a class="twitter-timeline" data-height="500" href="https://twitter.com/SIGL_EPITA">Tweets by SIGL_EPITA</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#" class="dark-btn"> <i class="fa fa-facebook"></i>             Nous rejoindre sur Facebook</a>
+                        <a href="#" class="dark-btn"> <i class="fa fa-facebook"></i>             {{"Facebook" | translate}}</a>
                     </div>
                     <div class="col-md-6">
                         <a href="mailto:laboratoire.sigl@epita.fr" class="gradient-btn">
-                                <span>Nous contacter</span>
+                                <span>{{"Contact" | translate}}</span>
                     </a>
                     </div>
                     
